--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,19 @@
 :root{}
-body{font-family:"Roboto",sans-serif ;
+
+/*body*/
+
+body{font-family:"Roboto"sans-serif ;
 color: #434455;
 background-color: #ffffff ;}
+
+/*header*/
+
+.nav-logo{
+  font-family: "Ralewey"sans-serif;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.17;
+  latter: spacing 0.03em;
+  text-transform: uppercase;
+  color: #4d5ae5;
+}
