--- a/css/styles.css
+++ b/css/styles.css
@@ -2,18 +2,19 @@
 
 /*body*/
 
-body{font-family:"Roboto"sans-serif ;
+body{font-family:"Roboto",sans-serif ;
 color: #434455;
 background-color: #ffffff ;}
 
 /*header*/
 
 .nav-logo{
-  font-family: "Ralewey"sans-serif;
+  font-family: "Ralewey",sans-serif;
   font-weight: 800;
   font-size: 18px;
   line-height: 1.17;
-  latter: spacing 0.03em;
+  letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
+  text-decoration: none;
 }
