--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@ background-color: #ffffff ;}
 /*header*/
 
 .nav-logo{
-  font-family: "Ralewey",sans-serif;
+  font-family:"Raleway",sans-serif;
   font-weight: 800;
   font-size: 18px;
   line-height: 1.17;
