--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ background-color: #ffffff ;}
 
 /*header*/
 
-.nav-logo link{
+.nav-logo{
   font-family:"Raleway",sans-serif;
   font-weight: 800;
   font-size: 18px;
