--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ background-color: #ffffff ;}
 
 /*header*/
 
-.logo link{
+.logo {
   font-family:"Raleway",sans-serif;
   font-weight: 800;
   font-size: 18px;
@@ -18,3 +18,4 @@ background-color: #ffffff ;}
   color: #4d5ae5;
   text-decoration: none;
 }
+.link{text-decoration: none;}
