--- a/css/styles.css
+++ b/css/styles.css
@@ -22,11 +22,24 @@ background-color: #ffffff ;}
 
 .logo-color{color:#2e2f42 ;}
 
-.list-a{font-weight: 500;
+.list-a{
+font-weight: 500;
 line-height: 1.5;
 letter-spacing: 0.02em;
 color:#2e2f42 ;
 }
 .list-a:hover{
   color: #404bbf;
+}
+.list-b{
+font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+}
+.list-c{
+  font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
 }
