--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,7 @@ color: #404bbf;
 font-weight: 500;
 line-height: 1.5;
 letter-spacing: 0.02em;
-color:#2e2f42 ;
+color: #434455;
 }
 .list-a:hover{
   color: #404bbf;
