--- a/css/styles.css
+++ b/css/styles.css
@@ -50,3 +50,11 @@ color: #434455;
   letter-spacing: 0.02em;
   color:#2e2f42;
 }
+.section-one{
+  background-color: #2e2f42;
+  font-size: 56px;
+  line-height: 1.07;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: #ffffff;
+}
