--- a/css/styles.css
+++ b/css/styles.css
@@ -52,9 +52,12 @@ color: #434455;
 }
 .section-one{
   background-color: #2e2f42;
-  font-size: 56px;
-  line-height: 1.07;
-  text-align: center;
-  letter-spacing: 0.02em;
-  color: #ffffff;
-}
+
+  }
+  .section-effective{
+    font-size: 56px;
+    line-height: 1.07;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #ffffff;
+  }
