--- a/css/styles.css
+++ b/css/styles.css
@@ -67,7 +67,7 @@ color: #434455;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
-    letter-spacing:0.04;
+    letter-spacing:0.04em;
     color:#ffffff;
     cursor: pointer;
   }
