--- a/css/styles.css
+++ b/css/styles.css
@@ -77,3 +77,21 @@ color: #434455;
     .section-but:focus{
       background-color:#404BBF ;
     }
+  .features-title{
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0,02em;
+    color: #2e2f42;
+  }
+  .features-head{
+    font-weight: 500;
+      font-size: 20px;
+      line-height: 1.2;
+      letter-spacing: 0,02em;
+      color: #2e2f42;
+  }
+.features-text{
+  line-height: 1.5;
+  letter-spacing: 0,02em;
+}
