--- a/css/styles.css
+++ b/css/styles.css
@@ -108,8 +108,10 @@ color: #434455;
   color: #2e2f42;
 }
 /*section-4*/
-.section4-team{
+.section-4{
   background-color: #F4F4FD;
+}
+.section4-team{
   font-size: 36px;
   line-height: 1.11;
   text-align: center;
