--- a/css/styles.css
+++ b/css/styles.css
@@ -102,6 +102,7 @@ color: #434455;
 
 .section-img{
   font-size: 36px;
+  letter-spacing: 0.02em;
   line-height: 1.11;
   text-align: center;
   text-transform: capitalize;
@@ -110,6 +111,10 @@ color: #434455;
 /*section-4*/
 .section-4{
   background-color: #F4F4FD;
+}
+.section-4-tex{
+  background-color: #FFFFFF;
+  
 }
 
 
