--- a/css/styles.css
+++ b/css/styles.css
@@ -107,6 +107,7 @@ color: #434455;
   text-align: center;
   text-transform: capitalize;
   color: #2e2f42;
+  background-color: #ffffff;
 }
 /*section-4*/
 .list{
