--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
 
 /*body*/
 
-body{font-family:"Roboto",sans-serif ;
+body,desing-all btn{font-family:"Roboto",sans-serif ;
 color: #434455;
 background-color: #ffffff ;}
 
