--- a/css/styles.css
+++ b/css/styles.css
@@ -133,6 +133,13 @@ color: #434455;
   letter-spacing: 0.02em;
 }
 .desing-all{font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #4d5ae5;
+  background-color: #F4F4FD;
+
 
 }
 
