--- a/css/styles.css
+++ b/css/styles.css
@@ -139,6 +139,7 @@ color: #434455;
   letter-spacing: 0.04em;
   color: #4d5ae5;
   background-color: #F4F4FD;
+  cursor: pointer;
 }
 .desing-all:hover{
   color: #FFFFFF;
