--- a/css/styles.css
+++ b/css/styles.css
@@ -149,5 +149,12 @@ color: #434455;
   color:  #FFFFFF;
   background-color: #404BBF;
 }
+.card-name{
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+}
 
 
