--- a/css/styles.css
+++ b/css/styles.css
@@ -156,5 +156,10 @@ color: #434455;
   letter-spacing: 0.02em;
   color: #2e2f42;
 }
-
+.card-paragraf{
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color:#434455;
+   
+}
 
