--- a/css/styles.css
+++ b/css/styles.css
@@ -51,7 +51,7 @@ color:#2e2f42;
   font-style: normal;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color:#434455;
+  color:#2e2f42;
 }
 .section-one{
   background-color: #2e2f42;
