--- a/css/styles.css
+++ b/css/styles.css
@@ -53,6 +53,9 @@ color:#2e2f42;
   letter-spacing: 0.02em;
   color:#2e2f42;
 }
+.item-address{
+  color: #434455;
+}
 .section-one{
   background-color: #2e2f42;
 
