--- a/css/styles.css
+++ b/css/styles.css
@@ -51,7 +51,7 @@ color:#2e2f42;
   font-style: normal;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color:#434455;
+  color:#2e2f42;
 }
 
 .section-one{
@@ -117,7 +117,7 @@ color:#2e2f42;
 .list{
   background-color: #ffffff;
 }
-.section-format-4{
+.section-format-img{
   background-color: #F4F4FD;
 }
 /*Footer*/
