--- a/css/styles.css
+++ b/css/styles.css
@@ -120,6 +120,9 @@ color:#2e2f42;
 .section-format-img{
   background-color: #F4F4FD;
 }
+.section-picter{
+  background-color: #FFFFFF;
+}
 /*Footer*/
 
 .footer-web{
