--- a/css/styles.css
+++ b/css/styles.css
@@ -88,6 +88,9 @@ color:#2e2f42;
     letter-spacing: 0,02em;
     color: #2e2f42;
   }
+  .item-address{
+    color: #434455;
+  }
   /*section-2*/
 
   .features-head{
