--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,7 @@ color: #404bbf;
 font-weight: 500;
 line-height: 1.5;
 letter-spacing: 0.02em;
-color:#434455;
+color:#2e2f42;
 }
 .list-a:hover{
   color: #404bbf;
