--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 :root{
-  background-color: #FFFFFF;
+ --grey:#434455;
 }
 
 /*body*/
@@ -55,6 +55,8 @@ color:#2e2f42;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color:#2e2f42;
+  color: var(--grey);
+
 }
 
 .section-one{
