--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,11 @@
-:root{
- --grey:#434455;
+:root {
+ --grey:
+ #434455;
 }
 
 /*body*/
 
-body{font-family:"Roboto",sans-serif ;
+body {font-family:"Roboto",sans-serif ;
 color: #434455;
 background-color: #ffffff ;}
 
@@ -20,38 +21,38 @@ background-color: #ffffff ;}
   color: #4d5ae5;
   text-decoration: none;
 }
-.link{text-decoration: none;}
+.link {text-decoration: none;}
 
-.link:hover{
+.link:hover {
   color:#404bbf ;
 }
-.link:focus{
+.link:focus {
 color: #404bbf;
 }
 
-.logo-color{color:#2e2f42;
+.logo-color {color:#2e2f42;
   
 }
 
 
-.list-a{
+.list-a {
 font-weight: 500;
 line-height: 1.5;
 letter-spacing: 0.02em;
 color:#2e2f42;
 
 }
-.list-a:hover{
+.list-a:hover {
   color: #404bbf;
 }
-.list-a:focus{
+.list-a:focus {
   color: #404bbf;
 }
 
 
 /*address*/
 
-.address{
+.address {
   font-style: normal;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -62,18 +63,18 @@ color:#2e2f42;
 /*section1*/
 
 
-.section-one{
+.section-one {
   background-color: #2e2f42;
 
   }
-  .section-effective{
+  .section-effective {
     font-size: 56px;
     line-height: 1.07;
     letter-spacing: 0.02em;
     text-align: center;
     color: #ffffff;
   }
-  .section-but{
+  .section-but {
     background-color: #4D5AE5;
     font-family:"Roboto",sans-serif;
     font-weight: 500;
@@ -83,13 +84,13 @@ color:#2e2f42;
     color:#ffffff;
     cursor: pointer;
   }
-  .section-but:hover{
+  .section-but:hover {
     background-color:#404BBF ;
   }
-    .section-but:focus{
+    .section-but:focus {
       background-color:#404BBF ;
     }
-  .features-title{
+  .features-title {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
@@ -100,21 +101,21 @@ color:#2e2f42;
   
   /*section-2*/
 
-  .features-head{
+  .features-head {
     font-weight: 500;
       font-size: 20px;
       line-height: 1.2;
       letter-spacing: 0.02em;
       color: #2e2f42;
   }
-.features-text{
+.features-text {
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
 
 /*section-3*/
 
-.section-img{
+.section-img {
   font-size: 36px;
   letter-spacing: 0.02em;
   line-height: 1.11;
@@ -124,30 +125,30 @@ color:#2e2f42;
   background-color: #ffffff;
 }
 /*section-4*/
-.list{
+.list {
   background-color:#ffffff;
 }
-.section-format-img{
+.section-format-img {
   background-color: #F4F4FD;
 }
-.section-picter{
+.section-picter {
   background-color: #FFFFFF;
 }
 /*Footer*/
 
-.footer-web{
+.footer-web {
   background-color:#2e2f42;
 }
 
-.logo-footer{
+.logo-footer {
   color: #F4F4FD;
 }
-.footer-text{
+.footer-text {
   color: #F4F4FD;
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
-.desing-all{font-family: "Roboto", sans-serif;
+.desing-all {font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -156,28 +157,28 @@ color:#2e2f42;
   background-color: #F4F4FD;
   cursor: pointer;
 }
-.desing-all:hover{
+.desing-all:hover {
   color: #FFFFFF;
   background-color: #404BBF;
 }
-.desing-all:focus{
+.desing-all:focus {
   color:  #FFFFFF;
   background-color: #404BBF;
 }
-.card-name{
+.card-name {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
 }
-.card-paragraf{
+.card-paragraf {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color:#434455;
    
 }
-.footer-page{
+.footer-page {
   background-color: #2e2f42;
 }
 
