--- a/css/styles.css
+++ b/css/styles.css
@@ -41,7 +41,7 @@ color: #404bbf;
 font-weight: 500;
 line-height: 1.5;
 letter-spacing: 0.02em;
-color: var(--background-color);
+color:#2e2f42;
 color: var(--grey);
 
 }
