--- a/css/styles.css
+++ b/css/styles.css
@@ -45,6 +45,9 @@ color: var(--background-color);
 }
 
 .list.b{
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
 color: var(--grey);
 }
 
