--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,7 @@ letter-spacing: 0.02em;
 color: var(--background-color);
 }
 
-.list.b{
+.list-b{
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
