--- a/css/styles.css
+++ b/css/styles.css
@@ -39,7 +39,7 @@ color: #404bbf;
 }
 
 .logo-color{
-  color:#2e2f42;
+  color:var(--background-color);
   
 }
 
@@ -72,7 +72,7 @@ color: var(--grey);
   font-style: normal;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color:#2e2f42;
+  color:var(--background-color);
  
 
 }
@@ -80,7 +80,7 @@ color: var(--grey);
 
 
 .section-one{
-  background-color: #2e2f42;
+  background-color:var(--background-color);
 
   }
   .section-effective{
@@ -88,30 +88,30 @@ color: var(--grey);
     line-height: 1.07;
     letter-spacing: 0.02em;
     text-align: center;
-    color: #ffffff;
+    color:var(--white-color);
   }
   .section-but{
-    background-color: #4D5AE5;
+    background-color:var(--blu-color);
     font-family:"Roboto",sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing:0.04em;
-    color:#ffffff;
+    color:var(--white-color);
     cursor: pointer;
   }
   .section-but:hover{
-    background-color:#404BBF ;
+    background-color:var(--dark-blu);
   }
     .section-but:focus{
-      background-color:#404BBF ;
+      background-color:var(--dark-blu);
     }
   .features-title{
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
-    color: #2e2f42;
+    color:var(--background-color);
   }
 
   
@@ -122,7 +122,7 @@ color: var(--grey);
       font-size: 20px;
       line-height: 1.2;
       letter-spacing: 0.02em;
-      color: #2e2f42;
+      color:var(--background-color);
   }
 .features-text{
   line-height: 1.5;
@@ -137,28 +137,28 @@ color: var(--grey);
   line-height: 1.11;
   text-align: center;
   text-transform: capitalize;
-  color: #2e2f42;
-  background-color: #ffffff;
+  color:var(--background-color);
+  background-color:var(--white-color);
 }
 /*section-4*/
 .list{
-  background-color:#ffffff;
+  background-color:var(--white-color);
 }
 .section-format-img{
-  background-color: #F4F4FD;
+  background-color:var(--light-white);
 }
 .section-picter{
-  background-color: #FFFFFF;
+  background-color:var(--white-color);
 }
 /*Footer*/
 
 
 
 .logo-footer{
-  color: #F4F4FD;
+  color:var(--light-white);
 }
 .footer-text{
-  color: #F4F4FD;
+  color:var(--light-white);
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
@@ -167,32 +167,32 @@ color: var(--grey);
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.04em;
-  color: #4d5ae5;
-  background-color: #F4F4FD;
+  color:var(--blu-color);
+  background-color:var(--light-white);
   cursor: pointer;
 }
 .desing-all:hover{
-  color: #FFFFFF;
-  background-color: #404BBF;
+  color:var(--white-color);
+  background-color:var(--dark-blu);
 }
 .desing-all:focus{
-  color:  #FFFFFF;
-  background-color: #404BBF;
+  color:var(--white-color);
+  background-color:var(--dark-blu);
 }
 .card-name{
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  color: #2e2f42;
+  color:var(--background-color);
 }
 .card-paragraf{
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color:#434455;
+  color:var(--grey);
    
 }
 .footer-page{
-  background-color: #2e2f42;
+  background-color:var(--background-color);
 }
 
