--- a/css/styles.css
+++ b/css/styles.css
@@ -49,12 +49,10 @@ letter-spacing: 0.02em;
 color: var(--grey);
 }
 
-.list-a:hover,.list-a:focus{
+.list-a:hover,.list-a:focus,.list-b:hover,.list-b:focus{
   color: #404bbf;
 }
-.list-b:hover,.list-b:focus{
-  color: #404bbf;
-}
+
 /*address*/
 
 .address{
